src/objects/LMS_Leave__c.object
<CustomObject>
    <fields>
        <fullName>LMS_Employee__c</fullName>
        <label>LMS Employee</label>
        <referenceTo>LMS_Employee__c</referenceTo>
        <relationshipName>LMS_Leaves</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>LMS_From_Date__c</fullName>
        <label>From Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LMS_To_Date__c</fullName>
        <label>To Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>No_of_Days__c</fullName>
        <formula>LMS_To_Date__c  -  LMS_From_Date__c +1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>No of Days</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <label>Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Type_of_Leaves__c</fullName>
        <label>Type of Leaves</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Casual Leave</fullName>
                </value>
                <value>
                    <fullName>Sick Leave</fullName>
                </value>
                <value>
                    <fullName>Loss of Pay</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Leave</label>
    <nameField>
        <displayFormat>LE{0000}</displayFormat>
        <label>Leave Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Leaves</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>